refactor and improve readme
